@@ -48,7 +48,7 @@ Region: "R4j2b"
   VariableTitle: "H_{T} [GeV]"
   Label: "4j, 2b"
   ShortLabel: "4j, 2b"
-  Binning: 100,200,300,400,500,600,700,800,1000,1600
+  Binning: "AutoBin","TransfoD",0.,10.
 
 Region: "R4j3b"
   Type: BACKGROUND
@@ -57,7 +57,7 @@ Region: "R4j3b"
   VariableTitle: "H_{T} [GeV]"
   Label: "4j, 3b"
   ShortLabel: "4j, 3b"
-  Binning: 100,200,300,400,500,600,700,800,1000,1600
+  Binning: "AutoBin","TransfoD",0.,10.
 
 Region: "R4j4b"
   Type: BACKGROUND
@@ -66,7 +66,7 @@ Region: "R4j4b"
   VariableTitle: "H_{T} [GeV]"
   Label: "4j, #geq 4b"
   ShortLabel: "4j, 4b"
-  Binning: 100,200,300,400,500,600,700,800,1000,1600
+  Binning: "AutoBin","TransfoD",0.,10.
 
 Region: "R5j2b"
   Type: BACKGROUND
@@ -75,7 +75,7 @@ Region: "R5j2b"
   VariableTitle: "H_{T} [GeV]"
   Label: "5j, 2b"
   ShortLabel: "5j, 2b"
-  Binning: 100,200,300,400,500,600,700,800,1000,1600
+  Binning: "AutoBin","TransfoD",0.,10.
 
 Region: "R5j3b"
   Type: BACKGROUND
@@ -84,7 +84,7 @@ Region: "R5j3b"
   VariableTitle: "H_{T} [GeV]"
   Label: "5j, 3b"
   ShortLabel: "5j, 3b"
-  Binning: 100,200,300,400,500,600,700,800,1000,1600
+  Binning: "AutoBin","TransfoD",0.,10.
 
 Region: "R5j4b"
   Type: SIGNAL
@@ -93,7 +93,7 @@ Region: "R5j4b"
   VariableTitle: "H_{T} [GeV]"
   Label: "5j, #geq 4b"
   ShortLabel: "5j, #geq 4b"
-  Binning: 100,200,300,400,500,600,700,800,1000,1600
+  Binning: "AutoBin","TransfoD",0.,10.
 
 Region: "R6j2b"
   Type: BACKGROUND
@@ -102,7 +102,7 @@ Region: "R6j2b"
   VariableTitle: "H_{T} [GeV]"
   Label: "#geq 6j, 2b"
   ShortLabel: "#geq 6j, 2b"
-  Binning: 100,200,300,400,500,600,700,800,1000,1600
+  Binning: "AutoBin","TransfoD",0.,10.
 
 Region: "R6j3b"
   Type: SIGNAL
@@ -111,7 +111,7 @@ Region: "R6j3b"
   VariableTitle: "H_{T} [GeV]"
   Label: "#geq 6j, 3b"
   ShortLabel: "#geq 6j, 3b"
-  Binning: 100,200,300,400,500,600,700,800,1000,1600
+  Binning: "AutoBin","TransfoD",0.,10.
 
 Region: "R6j4b"
   Type: SIGNAL
@@ -120,7 +120,7 @@ Region: "R6j4b"
   VariableTitle: "H_{T} [GeV]"
   Label: "#geq 6j, #geq 4b"
   ShortLabel: "#geq 6j, #geq 4b"
-  Binning: 100,200,300,400,500,600,700,800,1000,1600
+  Binning: "AutoBin","TransfoD",0.,10.
 
 
 % --------------- %
